--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "quadrago",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+
+    "// dev --------------------------------------------------------": "",
+    "start": "ng serve -c development -o",
+    "start:prod": "ng serve -c production",
+
+    "// build ------------------------------------------------------": "",
+    "build": "ng build -c production",
+    "build:dev": "ng build -c development",
+    "watch": "ng build -c development --watch",
+
+    "// tests ------------------------------------------------------": "",
     "test": "ng test",
-    "serve:ssr:quadrago": "node dist/quadrago/server/server.mjs"
+
+    "// ssr --------------------------------------------------------": "",
+    "build:ssr": "ng build -c production",
+    "serve:ssr": "node dist/quadrago/server/server.mjs",
+    "preview": "node dist/quadrago/server/server.mjs"
   },
-  "private": true,
-    "dependencies": {
+  "dependencies": {
     "@angular/animations": "19.2.17",
     "@angular/cdk": "19.2.17",
     "@angular/common": "19.2.17",
